--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,8 @@
 import = ["~/.config/alacritty/catppuccin-macchiato.toml"]
 
+#[mouse]
+#url_launcher = "firefox-developer-edition"
+
 [env]
 TERM = "xterm-256color"
 
@@ -22,3 +25,14 @@ style = "Italic"
 family = "FiraCode Nerd Font Mono"
 style = "Regular"
 
+
+[[hints.enabled]]
+command = "xdg-open" # On Linux/BSD
+# command = "open" # On macOS
+# command = { program = "cmd", args = [ "/c", "start", "" ] } # On Windows
+hyperlinks = true
+post_processing = true
+persist = false
+mouse.enabled = true
+binding = { key = "U", mods = "Control|Shift" }
+regex = "(ipfs:|ipns:|magnet:|mailto:|gemini://|gopher://|https://|http://|news:|file:|git://|ssh:|ftp://)[^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
